@@ -798,7 +798,7 @@ h4.schema_oclass_sub {
 .nsviewType-bright { background:#fff3c8 !important; }
 .nsviewType-dark { background-color:#ffe27f !important; }
 
-.customType-border { border-color:#00a69c; }
-.customType-bright { background:#e1fffd !important; }
-.customType-dark { background-color:#91f1eb !important; }
+.customType-border { border-color:#b87500; }
+.customType-bright { background:#ffe3b1 !important; }
+.customType-dark { background-color:#e1b974 !important; }
 
