@@ -1,5 +1,6 @@
 March 2018 6.3
   - LAM Pro:
+   -> Support custom structural object classes with new custom type
    -> Support dynamic lists
 
 
